about to change buttons

--- a/react-day-3-afternoon/src/App.css
+++ b/react-day-3-afternoon/src/App.css
@@ -15,7 +15,16 @@
 }
 
 .name {
-  
+
+}
+
+.user-info {
+  text-align: left;
+  margin-left: 10%;
+}
+
+.movies {
+  text-align: left;
 }
 
 .App-logo {
