--- a/react-day-3-afternoon/src/App.css
+++ b/react-day-3-afternoon/src/App.css
@@ -27,6 +27,14 @@
   text-align: left;
 }
 
+.edit-btn {
+  border-radius: 10px;
+  background-color: rgb(47, 125, 266);
+  border: none;
+  padding: 10px 20px;
+  font-size: 1.2rem;
+}
+
 .App-logo {
   animation: App-logo-spin infinite 20s linear;
   height: 40vmin;
